--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,6 @@
     font-family: 'Inconsolata', monospace;
 }
 
-.container{
-    background-image:url("../assets/images/back.JPEG") ;
-    background-size: cover; 
-
-}
 
 #nav .col-12{
     background: black;
@@ -23,19 +18,22 @@
 
 #first-image  .col-12{
     background-image: url("../assets/images/2.JPEG"); 
-    background-attachment: top ;
+   
   
 }
 
 #first-image  .col-6{
     font-size: 40px;
     text-align: center;
+    margin: 100px 0px;
    
 }
 
 #first-image{
-    background:;
-    height: 100%;
+    background-image: url("../assets/images/back.JPEG");
+    height: 500px;
+  
+    background-size:cover; 
 }
 #what-we{
     font-size: 20px;
@@ -61,7 +59,8 @@
     margin: 30px 0px ;
 }
 
-#nav .col-4, #nav .col-1{
+#nav .col-4,
+ #nav .col-1{
     padding-top:10px;
 }
 
@@ -76,10 +75,16 @@ button{
     height: 30%;
 }
 
-#main .col-6,
-#main .col-4{
+#main .col-5,
+{
     margin-bottom: 3%;
 }
+
+#main .col-4{
+    margin-bottom: 15%;
+}
+
+
 #main button{
     width: 20%;
     height: 30px;
@@ -87,7 +92,8 @@ button{
     margin-top:20px;
 }
 
-#cards .col-3 p{
+#cards .col-3 p,
+#cards .col-4 p{
     margin-top: 20px;
     padding: 10px;
 }
@@ -96,5 +102,26 @@ button{
     height: 30px;
     border-radius: 5px;
     margin-top:20px;
+    margin-bottom: 20px;
+    margin-left: 5px;
 
+}
+
+#image-card {
+    background-image:url("../assets/images/im1-JPEG.jpg");
+    background-size:cover;  
+    height: 400px;
+}
+
+#image-card-2{
+    background-image:url("../assets/images/im2.JPEG");
+    background-size:cover;  
+    height: 400px;
+}
+
+#image-card-3{
+    background-image:url("../assets/images/im3.JPEG");
+    background-size:cover; 
+    background-position: center; 
+    height: 400px;
 }
