--- a/css/media.css
+++ b/css/media.css
@@ -1,20 +1,23 @@
 
-@media(max-width:768px) {
+@media(max-width:900px) {
    #nav .col-4{
-        width: 60%;
+        width: 50%;
         font-size: 24px;
     }
-    .col-1{
+   .col-1{
        
         display: none;
-        width: 0%;
+        width: 40%;
     }
     #button{
-        display:inline-block;
+        display:block;
         width: 10%;
-        height: 60px;
-       
-       line-height: 2px;
+        height: 50px;
+       line-height: .3px;
+       /*position: relative;
+       bottom:28px; 
+       left:100px; 
+       margin-top: 14px;*/
 
     }
     #first-image .col-6{
@@ -22,7 +25,7 @@
         font-size: 50px;
     }
    
-    #main .col-6,#main .col-4{
+    #main .col-5,#main .col-4{
       width: 90%;
 
     }
@@ -36,7 +39,8 @@
     }
 
     #footer .col-12{
-        width: 100%;
+        width: 90%;
         text-align: center;
+        height: 80px;
     }
 }
