--- a/css/media.css
+++ b/css/media.css
@@ -13,7 +13,7 @@
         display:block;
         width: 10%;
         height: 50px;
-       line-height: .3px;
+       line-height: 5px;
        /*position: relative;
        bottom:28px; 
        left:100px; 
