--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,7 @@
         width: 10%;
         height: 50px;
        line-height: 5px;
+       border-radius: 5px;
        /*position: relative;
        bottom:28px; 
        left:100px; 
