--- a/css/grid.css
+++ b/css/grid.css
@@ -3,9 +3,9 @@
     box-sizing: border-box;
  }
   .container {
-    max-width: 1300px;
+    max-width: 1400px;
     width: 100%;
-    margin: 0 auto ;
+    margin: 0px auto ;
     
   }
   
